# projet-stock

./: .env.encrypted  .env.example  .gitignore  AGENTS.md  MOHIM.txt  README.md  config.py  csrf.py  db.py  fix_dates.py  main.py  netlify.toml  notifications.py  protect_env.py  pyproject.toml  railway.json  render.yaml  requirements.txt  scheduler.py  translations.py  utils.py
attached_assets/: _1755884796344.env  _1755884796347.replit  main_1755884796348.py  pyproject_1755884796348.toml  replit_1755884796348.md  stock_1755884796349.db  translations_1755884796349.py
email_templates/: password_reset_ar.html  password_reset_fr.html  product_deleted_ar.html  product_deleted_fr.html  product_expiring_ar.html  product_expiring_fr.html
netlify/functions/: api.py
routes/: __init__.py  auth.py  categories.py  dashboard.py  email_mgmt.py  inventory.py  logo.py  movements.py  notifications_api.py  products.py  reports.py  search.py  suppliers.py  users.py
static/css/: style.css
static/js/: main.js
templates/: add_movement.html  add_product.html  add_user.html  archived_products.html  audit_log.html  base.html  categories.html  check_column.py  dashboard.html  edit_product.html  edit_user.html  email_management.html  forgot_password.html  import_errors.html  import_products.html  inventory.html  login.html  logo_management.html  movement_reports.html  movements.html  product_history.html  product_reports.html  products.html  reports.html  reset_password.html  suppliers.html  users.html
