[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-moment>=1.0.6",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "xlsxwriter>=3.2.5",
    "pillow>=11.3.0",
    "werkzeug>=3.1.3",
    "python-dotenv>=1.1.1",
    "numpy>=2.3.2",
    "apscheduler>=3.11.0",
    "pandas>=2.3.2",
    "cryptography>=44.0.0",
    "flask-wtf>=1.2.0",
    "fpdf2>=2.8.0",
]
